# graphics-course-practice

./: .gitignore  readme.md
2021/: readme.md
2021/gamma-correction/: CMakeLists.txt  main.cpp
2021/practice10/: CMakeLists.txt
2021/practice11/: main.cpp  particle.blend  particle.gray
2021/practice12/: bunny64  house.mtl  house64  main.cpp
2021/practice13/: aabb.hpp  frustum.hpp  main.cpp  mesh_utils.cpp
2021/practice2/: CMakeLists.txt
2021/practice3/: main.cpp
2021/practice5/: CMakeLists.txt  main.cpp  test_image.h
2021/practice6/: textures.hpp
2021/practice6/textures/raw/: brick_ao.rgb  brick_roughness.rgb
2021/practice7/: main.cpp
2021/practice9/: CMakeLists.txt
2022/practice1/: CMakeLists.txt  main.cpp
2022/practice10/: CMakeLists.txt  main.cpp
2022/practice11/: main.cpp  obj_parser.cpp
2022/practice13/: gltf_loader.cpp  gltf_loader.hpp
2022/practice13/wolf/: Wolf-Blender-2.82a.gltf
2022/practice14/: CMakeLists.txt  gltf_loader.cpp  gltf_loader.hpp
2022/practice15/: CMakeLists.txt  main.cpp  msdf_loader.hpp
2022/practice2/: main.cpp
2022/practice4/: CMakeLists.txt  main.cpp
2022/practice5/: main.cpp  obj_parser.cpp
2022/practice6/: main.cpp  obj_parser.hpp
2022/practice7/: CMakeLists.txt  main.cpp
2022/practice9/: CMakeLists.txt  main.cpp
easing/: CMakeLists.txt  main.cpp
gamma-correction/: main.cpp
hw1/: CMakeLists.txt  camera.cpp  camera.h  grid.cpp  grid.h  main.cpp  program.cpp  program.h  shaders.h
hw1/glhelpers/: glhelpers.cpp  glhelpers.hpp
hw2/: CMakeLists.txt  main.cpp
practice1/: CMakeLists.txt  main.cpp
practice10/: human.blend  main.cpp
practice11/: CMakeLists.txt  main.cpp
practice12/: CMakeLists.txt  bunny.data  cloud.data  disney_cloud.data  disney_cloud_ao.data  main.cpp
practice13/: CMakeLists.txt  aabb.cpp  gltf_loader.cpp  gltf_loader.hpp  main.cpp  mesh_utils.hpp
practice13/cmake/modules/: FindSDL2.cmake
practice13/dancing/: dancing.gltf
practice14/: frustum.cpp  intersect.hpp  main.cpp
practice14/bunny/: bunny.gltf
practice15/: msdf_loader.cpp
practice15/font/: font-msdf.json
practice2/: main.cpp
practice3/: CMakeLists.txt  main.cpp
practice4/: CMakeLists.txt  main.cpp  obj_parser.hpp
practice5/: CMakeLists.txt  main.cpp  obj_parser.hpp
practice6/: CMakeLists.txt  main.cpp  obj_parser.hpp
practice6/textures/raw/: brick_albedo.rgb  brick_normal.rgb
practice7/: CMakeLists.txt  main.cpp
practice8/: CMakeLists.txt  main.cpp  obj_parser.hpp
practice9/: main.cpp
